# fusion_viso2_imu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RTBP.m  Vehicle.m  compare_stochastic_with_vel.m  compare_with_observations.m  config.yaml  draw_ellipse.m  execute_and_plot.m  filter_log.m  find_cov.m  iterate_Q.m  iterate_compare_stochastic_with_vel.m  library.cpp  library.h  multivar_noise.h  plot_data.m  plot_it_comp_sto_with_vel.m  plot_log.m  read_filtered_log.m  read_log.m  read_stream_aligner.m  sa.txt  test.cpp  test_rotations.cpp  test_rotations.m
exoter_logs/log-2/: delta_eo.txt  delta_vo.txt  eo.txt  info.yml  vo.txt
exoter_logs/log-3/: delta_eo.txt  delta_vo.txt  eo.txt  info.yml  vo.txt
exoter_logs/log-4/: delta_eo.txt  delta_vo.txt  eo.txt  info.yml  vo.txt
functions/: CMakeLists.txt  functions.cpp  functions.h
iterate_data/: 1000r.mat  100r.mat  10r.mat  400r.mat
matlab_functions/: car_1.stl  draw_ellipse.m  euld2localw.m  functionSignatures.json  generate_c_functions.m  latex_show.m  localw2euld.m  my_eul2rotm.m  my_quat2eul.m  plot_car.m  plot_data.m  print_mat.m  print_var.m  print_vec.m  read_log.m
matlab_functions/kinematic_functions/: Linear.m  RTBP.m  Vehicle.m  Vehicle3_Kin.m  Vehicle3_Kin_Cloning.m  Vehicle_Cloning.m  Vehicle_Kin_Cloning.m
